--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.8.6",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "next": "13.4.19",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "rsuite": "^5.39.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/jspdf": "^2.0.0"
   }
 }
