--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.2.6",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
