--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.2.6",
+		"@ant-design/plots": "^1.2.5",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
