--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"jspdf-autotable": "^3.6.0",
 		"next": "13.4.19",
 		"nextjs-progressbar": "^0.0.16",
+		"nextjs-toploader": "^1.4.2",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-cropper": "^2.3.3",
