--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-cropper": "^2.3.3",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
+		"react-pdf": "^7.3.3",
 		"react-redux": "^8.1.2",
 		"rsuite": "^5.39.0",
 		"tailwindcss": "3.3.3",
