--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
 		"react-pdf": "^7.3.3",
+		"react-qr-reader": "3.0.0-beta-1",
 		"react-redux": "^8.1.2",
 		"rsuite": "^5.39.0",
 		"tailwindcss": "3.3.3",
